Fixes alignment in home in small displays

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -211,6 +211,13 @@
   font-size: 3em;
 }
 
+@media all and (max-width: 1200px) {
+  .card-1, .card-2, .card-3 {
+    display: flex;
+    align-items: center;
+  }
+}
+
 @media all and (max-width: 600px) {
 
   .menu-close {
